--- a/lib/dedalo/component_autocomplete_hi/css/component_autocomplete_hi.less
+++ b/lib/dedalo/component_autocomplete_hi/css/component_autocomplete_hi.less
@@ -169,6 +169,9 @@
 			margin-bottom: 5px;
 			margin-right: 5px;
 		}
+		img:hover {
+			background-color: #ffffff;
+		}
 		img:active {
 			opacity: 0.4;
 		}
