--- a/lib/dedalo/component_geolocation/css/component_geolocation.less
+++ b/lib/dedalo/component_geolocation/css/component_geolocation.less
@@ -18,12 +18,18 @@
 		padding-bottom: 10px;
 	}
 
+
+
 /* FIELDS 
 -------------------------------------------------- */
 	.geolocation_text {
 		font-size: 14px;
 		top: 2px;
 		margin-right: 5px;
+	}
+
+	.map_inputs input {
+		margin-left: 3px;
 	}
 
 	.map_inputs	.geolocation_separator {
@@ -62,67 +68,69 @@
 
 /* MAP 
 -------------------------------------------------- */
-.leaflet_map {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	min-height: 300px;	
-	margin: 0;
-	padding: 0;
-	padding-bottom: 5px;
-	}
-	.leaflet-control-zoom a {
-		font-size: initial !important;
-		font-weight: bold;
-	}
-	.map_inputs {
-		-webkit-touch-callout: none;
-	    -webkit-user-select: none;
-	    -khtml-user-select: none;
-	    -moz-user-select: none;
-	    -ms-user-select: none;
-	    user-select: none;
-		position: absolute;
-		top: 10px;
-		left: 50px;
-		//right: 50px;
-		background-color: rgb(255, 255, 255);
-		padding: 5px;
-		border-radius: 4px;
-		//max-width: 660px;
-		//box-shadow: 0 1px 5px rgba(0,0,0,0.65);
-		z-index: @elements_over_z_index;
-		// From new leaflet 1.0 (removed shadow and add solid line around)
-		  border: 2px solid rgba(0,0,0,0.2);
-  		  background-clip: padding-box;	
-		
+	.leaflet_map {
+		position: relative;
+		width: 100%;
+		height: 100%;
+		min-height: 300px;	
+		margin: 0;
+		padding: 0;
+		padding-bottom: 5px;
 		}
-		.map_inputs span:not(:nth-of-type(1)) {
-			padding-left: 5px;
+		.leaflet-control-zoom a {
+			font-size: initial !important;
+			font-weight: bold;
 		}
-		.map_inputs  input[name="zoom"] {
-			width:28px;
-			text-align: center;
-		}
+		.map_inputs {
+			-webkit-touch-callout: none;
+		    -webkit-user-select: none;
+		    -khtml-user-select: none;
+		    -moz-user-select: none;
+		    -ms-user-select: none;
+		    user-select: none;
+			position: absolute;
+			top: 10px;
+			left: 50px;
+			//right: 50px;
+			background-color: rgb(255, 255, 255);
+			padding: 5px;
+			border-radius: 4px;
+			//max-width: 660px;
+			//box-shadow: 0 1px 5px rgba(0,0,0,0.65);
+			z-index: @elements_over_z_index;
+			// From new leaflet 1.0 (removed shadow and add solid line around)
+			  border: 2px solid rgba(0,0,0,0.2);
+	  		  background-clip: padding-box;	
+			
+			}
+			.map_inputs span:not(:nth-of-type(1)) {
+				padding-left: 5px;
+			}
+			.map_inputs  input[name="zoom"] {
+				width:28px;
+				text-align: center;
+			}
+
 
 /* PLAYER container (Transcription) 
 -------------------------------------------------- */
-.leaflet_map_player {
-	padding: 0;
-	margin: 0px;
-	position: relative;
-	margin-top: 5px;
-	}
-	.leaflet_map_player .content_data {
-		width: 100%;
-		height: 100%;
-		margin: 0;
+	.leaflet_map_player {
 		padding: 0;
-	}
-	.leaflet_map_player .leaflet_map {
-		min-height: 605px;
-	}
+		margin: 0px;
+		position: relative;
+		margin-top: 5px;
+		}
+		.leaflet_map_player .content_data {
+			width: 100%;
+			height: 100%;
+			margin: 0;
+			padding: 0;
+		}
+		.leaflet_map_player .leaflet_map {
+			min-height: 605px;
+		}
 	
+
 /* MAP FULL SCREEN
 -------------------------------------------------- */
 	.map_full {
@@ -151,3 +159,5 @@
 .leaflet-draw-draw-circle {
 	display: none !important;
 }
+
+
