--- a/lib/dedalo/component_geolocation/html/component_geolocation_edit.phtml
+++ b/lib/dedalo/component_geolocation/html/component_geolocation_edit.phtml
@@ -38,54 +38,55 @@
 							
 			case 2 :
 			case 3 :
-					#
-					# INPUTS
-					$html_content .= "<div class=\"map_inputs\">";
+					
+					// map_inputs
+						$html_content .= '<div class="map_inputs">';
 
-						# LAT
-						$html_content .= "<span>".label::get_label('latitud')."</span>";
-						$html_content .= "<input type=\"text\" name=\"lat\" value =\"{$dato->lat}\" ";
-						$html_content .= "data-tipo=\"{$tipo}\" ";
-						$html_content .= "data-lang=\"{$lang}\" ";
-						$html_content .= "data-section_tipo=\"{$section_tipo}\" ";
-						$html_content .= "data-parent=\"{$parent}\" ";
-						$html_content .= "data-modo=\"{$modo}\" ";
-						$html_content .= "data-name=\"lat\" ";
-						$html_content .= "/>";
+							# LAT
+							$html_content .= '<span>'.label::get_label('latitud').'</span>';
+							$html_content .= "<input type=\"text\" name=\"lat\" value =\"{$dato->lat}\" class=\"geo_active_input\" ";
+							$html_content .= "data-name=\"lat\" ";
+							
+							#$html_content .= "data-tipo=\"{$tipo}\" ";
+							#$html_content .= "data-lang=\"{$lang}\" ";
+							#$html_content .= "data-section_tipo=\"{$section_tipo}\" ";
+							#$html_content .= "data-parent=\"{$parent}\" ";
+							#$html_content .= "data-modo=\"{$modo}\" ";						
+							$html_content .= "/>";
 
-						# LON
-						$html_content .= " <span>".label::get_label('longitud')."</span>";
-						$html_content .= " <input type=\"text\" name=\"lon\" value=\"{$dato->lon}\" data-name=\"lon\"/>";
+							# LON
+							$html_content .= '<span>'.label::get_label('longitud').'</span>';
+							$html_content .= "<input type=\"text\" name=\"lon\" value=\"{$dato->lon}\" data-name=\"lon\" class=\"geo_active_input\"/>";
 
-						# ZOOM
-						$html_content .= " <span>".label::get_label('mapa_zoom')."</span>";
-						$html_content .= " <input type=\"text\" name=\"zoom\" value=\"{$dato->zoom}\" data-name=\"zoom\"/>";
+							# ZOOM
+							$html_content .= '<span>'.label::get_label('mapa_zoom').'</span>';
+							$html_content .= "<input type=\"text\" name=\"zoom\" value=\"{$dato->zoom}\" data-name=\"zoom\" class=\"geo_active_input\"/>";
 
-						# ALT
-						$html_content .= " <span>".label::get_label('altitude')."</span>";
-						#$html_content .= " <span name=\"alt\" data-name=\"alt\"/>".$dato->alt."</span>";
-						$alt = isset($dato->alt) ? $dato->alt : null;
-						$html_content .= " <input type=\"text\" name=\"alt\" class=\"input_altitude\" value=\"{$alt}\" data-name=\"alt\" readonly=\"readonly\"/>";
-						
-						# SEPARATOR					
-						$html_content .= " <span class=\"geolocation_separator\"></span>";
+							# ALTITUDE
+							$html_content .= '<span>'.label::get_label('altitude').'</span>';
+							#$html_content .= " <span name=\"alt\" data-name=\"alt\"/>".$dato->alt.'</span>';
+							$alt = isset($dato->alt) ? $dato->alt : null;
+							$html_content .= "<input type=\"text\" name=\"alt\" class=\"input_altitude\" value=\"{$alt}\" data-name=\"alt\" readonly=\"readonly\"/>";
+							
+							# SEPARATOR
+							$html_content .= '<span class="geolocation_separator"></span>';
 
-						# REFRESH BUTTON
-						$html_content .= " <span id=\"map_refresh\" class=\"glyphicon glyphicon-refresh geolocation_text link\"></span>";
+							# REFRESH BUTTON
+							$html_content .= "<span id=\"map_refresh\" class=\"glyphicon glyphicon-refresh geolocation_text link\"></span>";
 
-						# SEPARATOR
-						$html_content .= " <span class=\"geolocation_separator\"></span>";
+							# SEPARATOR
+							$html_content .= '<span class="geolocation_separator"></span>';
 
-						# SAVE BUTTON
-						$html_content .= " <span id=\"map_fixed\" class=\"link save_geolocation\"> ".label::get_label('salvar')."</span>";
+							# SAVE BUTTON
+							$html_content .= "<span id=\"map_fixed\" class=\"link save_geolocation\"> ".label::get_label('salvar').'</span>';
 
-						# SEPARATOR					
-						$html_content .= " <span class=\"geolocation_separator\"></span>";
+							# SEPARATOR
+							$html_content .= '<span class="geolocation_separator"></span>';
 
-						# TOGGLE BUTTON
-						$html_content .= " <span id=\"map_fixed\" class=\"link glyphicon glyphicon-fullscreen geolocation_text\" onclick=\"component_geolocation.toggle_full_map(this)\"></span>";
+							# TOGGLE BUTTON
+							$html_content .= "<span id=\"map_fixed\" class=\"link glyphicon glyphicon-fullscreen geolocation_text\" onclick=\"component_geolocation.toggle_full_map(this)\"></span>";
 
-					$html_content .= " </div>";//end map_inputs
+						$html_content .= '</div>';//end map_inputs
 
 
 					#
@@ -118,21 +119,9 @@
 		print $html_content;
 	
 	
-	print "</div>";
+	print '</div>';
 
 
 	print component_common_draw::html_delimiter($component_name, $tipo, $parent, $label, 'out');
 
 
-/*
-<script type="text/javascript">
-// Set var geo provider fron config
-component_geolocation.DEDALO_GEO_PROVIDER = '<?php echo DEDALO_GEO_PROVIDER ?>';
-
-// Build map
-window.addEventListener('load', function(e){
-	component_geolocation.init_map('<?php echo $identificador_unico ?>');
-});		
-</script>
-*/
-?>
