Minor css inspector changes

--- a/lib/dedalo/inspector/css/inspector.less
+++ b/lib/dedalo/inspector/css/inspector.less
@@ -198,10 +198,9 @@
 	padding-left: 4px;
 	padding-right: 4px;
 	z-index: 10;
-	//width: 100%;
-
+	width: 100%;
+	min-width: 400px;
     float: right;
-    width: 400px;
 }
 #inspector_log .ok, #inspector_log .error {
 	margin: 0px;
