Component image refactorized and fixed small user problems when use paper draw tools

--- a/lib/dedalo/component_image/html/component_image_edit.phtml
+++ b/lib/dedalo/component_image/html/component_image_edit.phtml
@@ -64,7 +64,7 @@
 					$add_class = 'no_file';
 				}
 
-				$html_content .= "<div class=\"loading_image blink\">Loading image..</div>";
+				$html_content .= '<div class="loading_image blink">Loading image..</div>';
 		
 
 				# CANVAS : IMAGE
@@ -98,10 +98,10 @@
 		print $html_content;
 	
 	
-	print "</div>"; //wrap
+	print "</div>";//wrap
 
 
 	# html_delimiter
 	print component_common_draw::html_delimiter($component_name, $tipo, $parent, $label, 'out');
 	
-?>
+
