--- a/lib/dedalo/component_image/html/component_image_edit_canvas.phtml
+++ b/lib/dedalo/component_image/html/component_image_edit_canvas.phtml
@@ -1,20 +1,19 @@
 <?php
+		
+	# html_delimiter
+	print component_common_draw::html_delimiter($component_name, $tipo, $parent, $label, 'in');
 
-	# VISUALIZADOR HTML	
-	
-	
-	print "<!-- IMAGE [tipo:$tipo section_id_matrix:$parent] $label -->";
 
-	print "<div class=\"css_wrap_image wrap_component\" id=\"{$id_wrapper}\"
-	data-tipo=\"{$tipo}\"
-	data-lang=\"{$lang}\"
-	data-section_tipo=\"{$section_tipo}\"
-	data-parent=\"{$parent}\"
-	data-modo=\"{$modo}\"
-	data-dato=\"{$valor}\"
-	data-component_name=\"{$component_name}\"
-	data-related_tipo='{$ar_related_component_tipo_json}'
-	>";
+	print "<div class=\"css_wrap_image wrap_component\" id=\"{$id_wrapper}\" ";
+	print "data-tipo=\"{$tipo}\" ";
+	print "data-lang=\"{$lang}\" ";
+	print "data-section_tipo=\"{$section_tipo}\" ";
+	print "data-parent=\"{$parent}\" ";
+	print "data-modo=\"{$modo}\" ";
+	print "data-dato=\"{$valor}\" ";
+	print "data-component_name=\"{$component_name}\" ";
+	print "data-related_tipo='{$ar_related_component_tipo_json}' ";
+	print ">";
 	
 		
 		# ETIQUETA (LABEL)
@@ -36,38 +35,36 @@
 
 
 				# CANVAS : IMAGE   width=\"$img_width\" height=\"$img_height\"
-				$html_contenido .= "<canvas id=\"$identificador_unico\" class=\"canvas_transcription_edit\" resize hidpi=\"on\">";
-				$html_contenido .= "<img id=\"img_$identificador_unico\" src=\"$img_src\"
-				data-img_width=\"$img_width\"
-				data-img_height=\"$img_height\" />";
+				$html_contenido .= "<canvas id=\"$identificador_unico\" class=\"canvas_transcription_edit\" resize hidpi=\"off\">";
+				$html_contenido .= "<img id=\"img_$identificador_unico\" src=\"$img_src\" data-img_width=\"$img_width\" data-img_height=\"$img_height\"/>";
 				$html_contenido .= "</canvas>";
 
 				$html_buttons .= "<div class=\"image_buttons\">";
 				
-					$html_buttons .= '
-					<select name="zoom" id="zoom">
-						<option value="800">800%</option>
-						<option value="400">400%</option>
-						<option value="200">200%</option>
-						<option value="100">100%</option>
-						<option value="75">75%</option>
-						<option value="50">50%</option>
-						<option value="25">25%</option>
-						<option value="12.5">12.5%</option>
-						<option value="6.25">6.25%</option>
-						<option value="5">5%</option>
-						<option value="1">1%</option>
-						<option value=""></option>
-					</select>
-					';
-					$html_buttons .= "<span class=\"main_buttons\">";
-					$html_buttons .= "<input type=\"button\" value=\"cuadrado\" onclick=\"component_image.cuadrado.activate()\">";
-					$html_buttons .= "<input type=\"button\" value=\"circulo\" onclick=\"component_image.circulo.activate()\">";
-					$html_buttons .= "<input type=\"button\" value=\"vectores\" onclick=\"component_image.vectores.activate()\">";
-					$html_buttons .= "<input type=\"button\" value=\"puntero\" onclick=\"component_image.puntero.activate()\">";							
+					$html_buttons .= '<select name="zoom" id="zoom">';
+					$html_buttons .= '<option value="800">800%</option>';
+					$html_buttons .= '<option value="400">400%</option>';
+					$html_buttons .= '<option value="200">200%</option>';
+					$html_buttons .= '<option value="100">100%</option>';
+					$html_buttons .= '<option value="75">75%</option>';
+					$html_buttons .= '<option value="50">50%</option>';
+					$html_buttons .= '<option value="25">25%</option>';
+					$html_buttons .= '<option value="12.5">12.5%</option>';
+					$html_buttons .= '<option value="6.25">6.25%</option>';
+					$html_buttons .= '<option value="5">5%</option>';
+					$html_buttons .= '<option value="1">1%</option>';
+					$html_buttons .= '<option value=""></option>';
+					$html_buttons .= '</select>';
+					
+					$html_buttons .= "<div class=\"main_buttons hide\">"; // <i class=\"glyphicon glyphicon-cog\"></i>
+					#$html_buttons .= '<button class="btn btn-sm button_activate cuadrado" onclick=\"component_image.active_tool(this)\" data-tool_name=\"circulo\"> Cuadrado</button>';
+					$html_buttons .= "<input type=\"button\" value=\"cuadrado\" class=\"button_activate cuadrado\" onclick=\"component_image.active_tool(this)\" data-tool_name=\"cuadrado\">";
+					$html_buttons .= "<input type=\"button\" value=\"circulo\" class=\"button_activate\" onclick=\"component_image.active_tool(this)\" data-tool_name=\"circulo\">";
+					$html_buttons .= "<input type=\"button\" value=\"vectores\" class=\"button_activate\" onclick=\"component_image.active_tool(this)\" data-tool_name=\"vectores\">";
+					$html_buttons .= "<input type=\"button\" value=\"puntero\" class=\"button_activate\" onclick=\"component_image.active_tool(this)\" data-tool_name=\"puntero\">";
 					#$html_buttons .= "<input type=\"button\" value=\"anadido\" onclick=\"anadido.activate()\">";
-					$html_buttons .= "<input type=\"button\" value=\"salvar\" class=\"save_image_path\" onclick=\"component_image.salvar()\">";
-					$html_buttons .= "</span>";
+					$html_buttons .= "<input type=\"button\" value=\"salvar\" class=\"save_image_path\" onclick=\"component_image.save(this)\">";
+					$html_buttons .= "</div>";
 
 				$html_buttons .= "</div>";
 				break;
@@ -75,7 +72,11 @@
 		}
 
 		# INIT : Init text editor 
-		$html_contenido .= "\n<script>component_image.init_canvas('$identificador_unico','$id_wrapper');</script>";
+		$html_contenido .= '<script>';
+		$html_contenido .= 'window.addEventListener("load", function (event) {';
+		$html_contenido .= "component_image.init_canvas('$identificador_unico','$id_wrapper');";
+		$html_contenido .= '});';//end onload window
+		$html_contenido .= '</script>';
 
 		# Prepare content to show in page
 		tools::prepare_content($html_contenido);	
@@ -86,5 +87,10 @@
 		print $html_contenido;
 	
 	
-	print "\n</div><!-- /css_wrap_image IMAGE [tipo:$tipo section_id_matrix:$tipo] $label -->\n"; //wrap
-?>
+	print "</div>"; //wrap
+
+
+	# html_delimiter
+	print component_common_draw::html_delimiter($component_name, $tipo, $parent, $label, 'out');
+
+
