Fixed inspector position in description tool

--- a/lib/dedalo/tools/tool_description/css/tool_description.less
+++ b/lib/dedalo/tools/tool_description/css/tool_description.less
@@ -89,21 +89,20 @@ body {
 
 
 
-/* INSPECTOR
------------------------------------------------------- */
-	.tool_description_inspector_log {
-		/* width: 100px; 
-		background-color: #949494;*/
-		min-width: 154px;
-		/*white-space: nowrap;*/
-		text-align: center;
+// inspector
+	#inspector_log.tool_description_inspector_log {
+		//background-color: aliceblue;
 		display: block;
-		float: right;	
+		padding-left: 4px;
+		padding-right: 4px;
+		z-index: 10;
+		min-width: 400px;		
+		margin-right: 72px;
+		margin-left: 151px;
+		width: auto;
+		height: 2em;
 		position: absolute;
-		top: 0px;
-		right:0;
-		z-index: 2000;
-		opacity: .8;
+		margin-top: 0.70em;
 	}
 
 
