Fixed inspector position in description tool

--- a/lib/dedalo/tools/tool_description/html/tool_description_page.phtml
+++ b/lib/dedalo/tools/tool_description/html/tool_description_page.phtml
@@ -120,7 +120,7 @@
 
 
 	# INSPECTOR LOG TOOL_LANG ()
-	$html 	.= "<div id=\"inspector_log\" class=\"tool_inspector_log\"> </div>";
+	$html 	.= "<div id=\"inspector_log\" class=\"tool_inspector_log tool_description_inspector_log\"> </div>";
 
 
 
