Fix portal overflow cases control

--- a/lib/dedalo/component_portal/css/component_portal.less
+++ b/lib/dedalo/component_portal/css/component_portal.less
@@ -9,6 +9,8 @@
 	.css_wrap_portal {
 		padding-top: 5px;
 		padding-bottom: 7px;
+
+		overflow: auto;
 		}
 		/* > select only the first '.content_data' inside css_wrap_portal */
 		.css_wrap_portal > .content_data {
@@ -25,6 +27,7 @@
 		.css_wrap_portal > .css_label {
 			/* display: none; */
 			position: absolute;
+			width: 50% !important; // Portal always is in vertical mode
 		}
 	.component_relation_portal {
 
