--- a/lib/dedalo/button_login/html/button_login_edit.phtml
+++ b/lib/dedalo/button_login/html/button_login_edit.phtml
@@ -4,8 +4,7 @@
 		
 	
 	print "<!-- BUTTON LOGIN [tipo:$tipo id_matrix:$id] -->";
-
-	print "<div class=\"css_wrap_button_login\" >";
+	print '<div class="css_wrap_button_login">';
 	
 	# ETIQUETA (LABEL)
 	$html_label = component_common_draw::draw_label($this);
@@ -20,10 +19,12 @@
 	/>";
 	*/
 	$html_contenido .= "<div class=\"css_button_login css_button_generic\" ";
-	$html_contenido .= "data-tipo=\"{$target_tipo}\" ";
-	$html_contenido .= "title=\"$html_title\" ";
 	$html_contenido .= "onclick=\"login.Login()\" ";
-	$html_contenido .= ">$label</div>";
+	$html_contenido .= "data-tipo=\"{$target_tipo}\" ";
+	$html_contenido .= "title=\"$html_title\" ";	
+	$html_contenido .= ">";
+	$html_contenido .= $label;
+	$html_contenido .= "</div>";
 		
 	#$html_contenido .= " <input class=\"css_submit\" type=\"submit\" />";
 
@@ -31,5 +32,4 @@
 	print $html_contenido;
 
 		
-	print "</div>"; //wrap
-?>
+	print '</div>';//wrap
