component_pdf : added full screen mode (updated pdfjs lib to 2.0.943)

--- a/lib/dedalo/component_pdf/css/component_pdf.less
+++ b/lib/dedalo/component_pdf/css/component_pdf.less
@@ -123,3 +123,24 @@ iframe.pdf_viewer_frame {
 	background-color: #303030;
 	padding: 1px;
 }
+
+
+// pdf_viewer_full
+	.pdf_viewer_full {		
+
+		iframe {
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 100% !important;
+			height: 100% !important;
+			z-index: 9999;		
+			margin: 0;
+			padding: 0;
+		}
+	}
+
+
+
+
+
