Removed css overflow: auto for component_portal wrap

--- a/lib/dedalo/component_portal/css/component_portal.less
+++ b/lib/dedalo/component_portal/css/component_portal.less
@@ -10,7 +10,7 @@
 		padding-top: 5px;
 		padding-bottom: 7px;
 
-		overflow: auto;
+		//overflow: auto;
 		}
 		/* > select only the first '.content_data' inside css_wrap_portal */
 		.css_wrap_portal > .content_data {
