Minor code changes

--- a/lib/dedalo/tools/tool_administration/css/tool_administration.less
+++ b/lib/dedalo/tools/tool_administration/css/tool_administration.less
@@ -156,8 +156,20 @@
 	}
 
 
-	.panel_option_subcontent .text-left
-	{
+	.panel_option_subcontent .text-left	{
 		width: 100% !important;
 	}
+
+
+
+	// editor_json
+		.editor_json {
+			height:500px;
+			resize: vertical;
+			overflow: scroll;
+		}
+
+
+
+
 
