--- a/lib/dedalo/tools/tool_administration/html/tool_administration_page.phtml
+++ b/lib/dedalo/tools/tool_administration/html/tool_administration_page.phtml
@@ -491,7 +491,7 @@
 			#
 			# JSON EDITOR (EXPERIMENTAL)
 			#$html .= "<div id=\"{$editor_id}_save_document\" class=\"saveDocument\">Save</div>";
-			$html .= "<div id=\"{$editor_id}_container\" class=\"editor_json\" style=\"height:500px\"></div>";
+			$html .= "<div id=\"{$editor_id}_container\" class=\"editor_json\"></div>";
 			$html .= "<div id=\"convert_search_object_to_sql_query_response\" class=\"\"> convert_search_object_to_sql_query_response </div>";
 
 			$html .= "<script>";
