--- a/lib/dedalo/inspector/html/inspector_edit.phtml
+++ b/lib/dedalo/inspector/html/inspector_edit.phtml
@@ -4,113 +4,102 @@
 
 		
 	# INSPECTOR DIV
-	$html .= " <div id=\"inspector_div\" class=\"inspector_div box_shadow_1 box_border_radius_1\">";
-
-	
-		
-		
-		#
-		# INFO
-		#
-		# Header
-		$html .= "<div class=\"css_section_group_titulo tab_title title_down_box text_unselectable\">";
-		$html .= " <label class=\"css_label\">INFO</label>";
-		$html .= "</div>";
-		# Body
-		$html .= "<div class=\"css_section_group_content tab_content inspector_div_content\">";
-
-			$html .= $button_new_html;
-
-			# paginator placeholder
-			$html .= "<div id=\"wrap_inspector_paginator\"> Loading paginator.. </div>";
-		
-			# inspector_info
-			$html .= " <div id=\"inspector_info\" class=\"inspector_info_body\"></div>";
+	$html .= '<div id="inspector_div" class="inspector_div box_shadow_1 box_border_radius_1">';
 			
-			# Records navigator container ready		
-			$html .= " <div id=\"inspector_records_navigator\"></div>";
-		
-		$html .= "</div>";
-		
 		
 		#
-		# TOOLS
-		#
-		$html .= "<div id=\"tools_info_wrapper\">";
-		# Header		
-		$html .= "<div class=\"css_section_group_titulo tab_title title_down_box text_unselectable border_radius_0\" data-tab_id=\"Inspector_tools_tap\">";
-		$html .= "<label class=\"css_label\">".label::get_label('heramientas')."</label>";
-		$html .= "</div>";
-		# Body
-		$html .= "<div class=\"css_section_group_content tab_content inspector_div_content \" >";
+		# INFO 
+			# Header
+			$html .= '<div class="css_section_group_titulo tab_title title_down_box text_unselectable">';
+			$html .= " <label class=\"css_label\">INFO</label>";
+			$html .= "</div>";
+			# Body
+			$html .= "<div class=\"css_section_group_content tab_content inspector_div_content\">";
 
-			#
-			# FIXED SECTION TOOLS				
-						
-				# TOOL_DIFFUSION BUTTONS (for export to database, etc.) 
-				# dump( tool_diffusion::have_section_diffusion($section_tipo), ' var ++ '.to_string($section_tipo));
-				if ((bool)component_security_tools::is_authorized_tool_for_logged_user('tool_diffusion') &&
-					(bool)tool_diffusion::have_section_diffusion($section_tipo)) {
-					#$html .= tool_diffusion::get_diffusion_buttons('edit', $section_tipo, $section_id);
-					$tool_diffusion = new tool_diffusion($section_tipo,'button_inspector');
-					$tool_diffusion->section_id = $section_id;
-					$html  .= $tool_diffusion->get_html();
-				}
+				$html .= $button_new_html;
 
+				# paginator placeholder
+				$html .= "<div id=\"wrap_inspector_paginator\"> Loading paginator.. </div>";
+			
+				# inspector_info
+				$html .= " <div id=\"inspector_info\" class=\"inspector_info_body\"></div>";
 				
-				
-
-			#		
-			# SPECIFIC COMPONENT TOOLS
-				$html .= "<div id=\"inspector_tools\" class=\"inspector_info_body\">";
-				$html .= "<!-- Ajax load --> ";
-				$html .= "</div>";
-
-
-			#
-			# DEDALO_INSPECTOR_EXTRAS (Optional defined in config)
-				if (defined('DEDALO_INSPECTOR_EXTRAS')) {
-					ob_start();
-					include(DEDALO_INSPECTOR_EXTRAS);
-					$html .= ob_get_clean();
-				}	
-		$html .= "</div>";//end body tools
-		$html .= "</div>";//end tools_info_wrapper
-
-
-#
-		# ACTIVITY LOG
+				# Records navigator container ready		
+				$html .= " <div id=\"inspector_records_navigator\"></div>";
+			
+			$html .= '</div>';
+		
+		
 		#
-		$html .= "<div id=\"tools_info_wrapper\">";
-		# Header
-		$html .= "<div class=\"css_section_group_titulo tab_title title_down_box text_unselectable\">";
-		$html .= " <label class=\"css_label\">ACTIVITY LOG</label>";
-		$html .= "</div>";
-		# Body				
-		$html .= "<div class=\"css_section_group_content tab_content inspector_div_content\">";
-		$html .= " <div id=\"inspector_log\" class=\"inspector_info_body\"></div>";			
-		$html .= "</div>";
-		$html .= "</div>";//end tools_info_wrapper
+		# TOOLS	
+			$html .= "<div id=\"tools_info_wrapper\">";
+			# Header
+			$html .= "<div class=\"css_section_group_titulo tab_title title_down_box text_unselectable border_radius_0\" data-tab_id=\"Inspector_tools_tap\">";
+			$html .= "<label class=\"css_label\">".label::get_label('heramientas')."</label>";
+			$html .= "</div>";
+			# Body
+			$html .= "<div class=\"css_section_group_content tab_content inspector_div_content \" >";
+
+				#
+				# FIXED SECTION TOOLS							
+					# TOOL_DIFFUSION BUTTONS (for export to database, etc.) 
+					# dump( tool_diffusion::have_section_diffusion($section_tipo), ' var ++ '.to_string($section_tipo));
+					if ((bool)component_security_tools::is_authorized_tool_for_logged_user('tool_diffusion') &&
+						(bool)tool_diffusion::have_section_diffusion($section_tipo)) {
+						#$html .= tool_diffusion::get_diffusion_buttons('edit', $section_tipo, $section_id);
+						$tool_diffusion = new tool_diffusion($section_tipo,'button_inspector');
+						$tool_diffusion->section_id = $section_id;
+						$html  .= $tool_diffusion->get_html();
+					}
+
+				#		
+				# SPECIFIC COMPONENT TOOLS
+					$html .= "<div id=\"inspector_tools\" class=\"inspector_info_body\">";
+					$html .= "<!-- Ajax load --> ";
+					$html .= "</div>";
+
+
+				#
+				# DEDALO_INSPECTOR_EXTRAS (Optional defined in config)
+					if (defined('DEDALO_INSPECTOR_EXTRAS')) {
+						ob_start();
+						include(DEDALO_INSPECTOR_EXTRAS);
+						$html .= ob_get_clean();
+					}	
+			$html .= "</div>";//end body tools
+			$html .= "</div>";//end tools_info_wrapper
 
 
 		#
-		# INDEXATIONS
+		# ACTIVITY LOG 
+			$html .= "<div id=\"tools_info_wrapper\">";
+			# Header
+			$html .= "<div class=\"css_section_group_titulo tab_title title_down_box text_unselectable\">";
+			$html .= " <label class=\"css_label\">ACTIVITY LOG</label>";
+			$html .= "</div>";
+			# Body				
+			$html .= "<div class=\"css_section_group_content tab_content inspector_div_content\">";
+			$html .= " <div id=\"inspector_log\" class=\"inspector_info_body\"></div>";			
+			$html .= "</div>";
+			$html .= "</div>";//end tools_info_wrapper
+
+
 		#
-		$html .= "<div id=\"indexations_info_wrapper\">";
-		# Header
-		$html .= "<div class=\"css_section_group_titulo tab_title title_down_box text_unselectable border_radius_0\" data-tab_id=\"Inspector_relations_tap\">";
-		$html .= "<label class=\"css_label\">".label::get_label('indexaciones')."</label>";
-		$html .= "</div>";
-		# Body
-		$html .= "<div class=\"css_section_group_content tab_content inspector_div_content \" >";
-		$html .= " <div id=\"inspector_indexations\" class=\"inspector_info_body\"> </div>";
-		$html .= "</div>";
-		$html .= "</div>";//end indexations_info_wrapper
+		# INDEXATIONS 
+			$html .= "<div id=\"indexations_info_wrapper\">";
+			# Header
+			$html .= "<div class=\"css_section_group_titulo tab_title title_down_box text_unselectable border_radius_0\" data-tab_id=\"Inspector_relations_tap\">";
+			$html .= "<label class=\"css_label\">".label::get_label('indexaciones')."</label>";
+			$html .= "</div>";
+			# Body
+			$html .= "<div class=\"css_section_group_content tab_content inspector_div_content \" >";
+			$html .= " <div id=\"inspector_indexations\" class=\"inspector_info_body\"> </div>";
+			$html .= "</div>";
+			$html .= "</div>";//end indexations_info_wrapper
 
 	
 		#
-		# RELATIONS
-		#
+		# RELATIONS	
 			$html .= "<div id=\"relations_info_wrapper\">";
 				$html .= "<div id=\"inspector_relation_list\" class=\"css_section_group_titulo tab_title title_down_box text_unselectable border_radius_0\" data-tab_id=\"Inspector_relations_list_tap\"";
 				$html .= " >";
@@ -132,9 +121,8 @@
 			//$html .= $relation_list_html;
 			
 
-			#
-		# RELATIONS
 		#
+		# TIME MACHINE 
 			$html .= "<div id=\"time_machine_info_wrapper\">";
 				$html .= "<div id=\"inspector_time_machine_list\" class=\"css_section_group_titulo tab_title title_down_box text_unselectable border_radius_0\" data-tab_id=\"Inspector_time_machine_tap\"";
 				$html .= " >";
@@ -153,63 +141,60 @@
 					$html .= "</div>";
 				$html .= "</div>";
 			$html .= "</div>";
-			//$html .= $relation_list_html;
-				
+			//$html .= $relation_list_html;				
 
 		
+		#
+		# OTHERS 
+			if(SHOW_DEBUG===true) {
+				
+				$html .= "<div id=\"others_info_wrapper\">";
+				# Header
+				$html .= "<div class=\"css_section_group_titulo tab_title title_down_box text_unselectable border_radius_0\" data-tab_id=\"Inspector_others_tap\">";
+				$html .= "<label class=\"css_label\">OTHERS</label>";
+				$html .= "</div>";
+				# Body
+				$html .= "<div class=\"css_section_group_content tab_content inspector_div_content\">";
+				$html .= "<div id=\"inspector_others\" class=\"inspector_info_body\">";
+				
+					$html .= "<div id=\"load_time_inspector\"></div>";
 
-		if(SHOW_DEBUG===true) {
+				$html .= "</div>"; # <!-- /inspector_others -->
+				$html .= "</div>"; # <!-- /css_section_group_content -->
+				$html .= "</div>";//end tools_info_wrapper
 
-			#
-			# OTHERS
-			#
-			$html .= "<div id=\"others_info_wrapper\">";
-			# Header
-			$html .= "<div class=\"css_section_group_titulo tab_title title_down_box text_unselectable border_radius_0\" data-tab_id=\"Inspector_others_tap\">";
-			$html .= "<label class=\"css_label\">OTHERS</label>";
-			$html .= "</div>";
-			# Body
-			$html .= "<div class=\"css_section_group_content tab_content inspector_div_content\">";
-			$html .= "<div id=\"inspector_others\" class=\"inspector_info_body\">";
-			
-				$html .= "<div id=\"load_time_inspector\"></div>";
-
-			$html .= "</div>"; # <!-- /inspector_others -->
-			$html .= "</div>"; # <!-- /css_section_group_content -->
-			$html .= "</div>";//end tools_info_wrapper
-
-		}#if(SHOW_DEBUG===true)
-
+			}#if(SHOW_DEBUG===true)
 	
 
 		#
-		# DEBUG INFO
-		#
-		if(SHOW_DEVELOPER===true) {
-			$html .= "<div id=\"debug_info_wrapper\">";
-			# Header
-			$html .= "<div class=\"css_section_group_titulo tab_title title_down_box text_unselectable border_radius_0\" data-tab_id=\"Inspector_debug_tap\">";
-			$html .= "<label class=\"css_label\">Info</label>";
-			$html .= "</div>";
-			# Body
-			$html .= "<div id=\"inspector_debug\" class=\"inspector_info_body css_section_group_content tab_content inspector_div_content\">";			
-			$html .= "</div>";
+		# DEBUG INFO 
+			if(SHOW_DEVELOPER===true) {
 
-			$html .= "<div id=\"inspector_debug_dtl\" class=\"inspector_info_body css_section_group_content tab_content inspector_div_content\">";			
-			$html .= "<a href=\"javascript:void(0)\" onclick=\"inspector.open_data_link(this)\">DATA LINK</a>";
-			$html .= "</div>";
+				$html .= "<div id=\"debug_info_wrapper\">";
+				# Header
+				$html .= "<div class=\"css_section_group_titulo tab_title title_down_box text_unselectable border_radius_0\" data-tab_id=\"Inspector_debug_tap\">";
+				$html .= "<label class=\"css_label\">Info</label>";
+				$html .= "</div>";
+				# Body
+				$html .= "<div id=\"inspector_debug\" class=\"inspector_info_body css_section_group_content tab_content inspector_div_content\">";			
+				$html .= "</div>";
+
+				$html .= "<div id=\"inspector_debug_dtl\" class=\"inspector_info_body css_section_group_content tab_content inspector_div_content\">";			
+				$html .= "<a href=\"javascript:void(0)\" onclick=\"inspector.open_data_link(this)\">DATA LINK</a>";
+				$html .= "</div>";
+				
+				$html .= "</div>";//end debug_info_wrapper
+			}
 			
-			$html .= "</div>";//end debug_info_wrapper
-		}#end iif(SHOW_DEBUG===true || DEDALO_ENTITY=='development')
 		
-		
-	$html .= " </div>";#/inspector_div
+	$html .= '</div>';#/inspector_div
 
 
-	$html .= "<script>";
-	$html .= "inspector.init()";
-	$html .= "</script>";	
+	$html .= '<script>';
+	$html .= 'inspector.init()';
+	$html .= '</script>';	
 	
 
 	print $html;
-?>
+
+
