Changes the calculation behavior for use data of the component_date

--- a/lib/dedalo/component_calculation/html/component_calculation_edit.phtml
+++ b/lib/dedalo/component_calculation/html/component_calculation_edit.phtml
@@ -13,7 +13,8 @@
 	print "data-parent=\"{$parent}\" ";
 	print "data-modo=\"{$modo}\" ";
 	print "data-dato=\"{$dato}\"  ";
-	print "data-formula ='{$preprocess_formula}' ";
+	print "data-formula='{$preprocess_formula}' ";
+	print "data-ar_components_formula='{$ar_components_formula}'";
 	print "data-component_name=\"{$component_name}\" ";
 	print "data-component_info='{$component_info}' ";
 	print ">";
