--- a/lib/dedalo/tools/tool_image_versions/html/tool_image_versions_button.phtml
+++ b/lib/dedalo/tools/tool_image_versions/html/tool_image_versions_button.phtml
@@ -3,15 +3,16 @@
 	# VISUALIZADOR HTML	
 		
 	# BUTTON TOOL IN INSPECTOR
-	$html_tool    = "\n<!-- TOOL FILE VERSIONS [tipo:$tipo id_matrix:$id] -->";
+	$html_tool    = "<!-- TOOL FILE VERSIONS [tipo:$tipo id_matrix:$id] -->";
 	$html_tool   .= "<div class=\"tool_inspector_div\">";
 
 	$btn_title	  = label::get_label('abrir').' '.label::get_label('herramienta');
-	$html_tool   .= "\n<div class=\"icon_bs tool_image_versions_icon link\"
-								data-tipo=\"{$tipo}\" data-parent=\"{$parent}\"
-								title=\"$btn_title\"
-								onclick=\"tool_common.open_tool_image_versions(this)\"
-								> </div>";
+
+	$html_tool   .= "<div class=\"icon_bs tool_image_versions_icon link\" ";
+	$html_tool   .= "data-tipo=\"{$tipo}\" data-parent=\"{$parent}\" ";
+	$html_tool   .= "title=\"$btn_title\" ";
+	$html_tool   .= "onclick=\"tool_common.open_tool_image_versions(this)\" ";
+	$html_tool   .= "> </div>";
 
 
 	$html_tool   .= label::get_label('tool_image_versions');	#" File versions";
@@ -21,5 +22,3 @@
 
 	# PRINT HTML
 	print $html_tool;
-	
-?>
