Minor code clean

--- a/lib/dedalo/component_publication/html/component_publication_edit.phtml
+++ b/lib/dedalo/component_publication/html/component_publication_edit.phtml
@@ -97,9 +97,9 @@
 	print $html_content;
 
 
-	print "</div>"; //wrap
+	print '</div>'; //wrap
 
 	# html_delimiter
 	print component_common_draw::html_delimiter($component_name, $tipo, $parent, $label, 'out', $modo, $lang);
 
-?>
+
