--- a/lib/dedalo/section_group/html/section_group_edit.phtml
+++ b/lib/dedalo/section_group/html/section_group_edit.phtml
@@ -10,46 +10,37 @@
 
 		#
 		# ETIQUETA (LABEL)	
-		$html_label  = "<div class=\"css_section_group_titulo tab_title title_down_box text_unselectable\" data-tab_id=\"{$tipo}\">";
-		$html_label .= component_common_draw::draw_label($this);		
-		$html_label .= "</div>";	
+			$html_label  = "<div class=\"css_section_group_titulo tab_title title_down_box text_unselectable\" data-tab_id=\"{$tipo}\">";
+			$html_label .= component_common_draw::draw_label($this);		
+			$html_label .= "</div>";	
 			
 
 		#
 		# CONTENIDO (INPUT)
-		$html_content = "<div class=\"css_section_group_content tab_content section_group_content_{$modo} sgc_{$modo}\">";
-
-		
-			switch($permissions) {
-					
-				case 0	:
-					$html_content .= "<span class=\"css_span_dato\"> ".label::get_label('sin_acceso')." (group)</span>"; 		
-					break;
-								
-				case 1	:
-				case 2	: 
-				case 3	:
-					#$html_content .= '<div class="gridster"><ul>';
-					$html_content .= $components_html;	
-					#$html_content .= '</ul></div>';		
-					break;			
-			}
-
-		
-		$html_content .= "</div>";
+			$html_content = "<div class=\"css_section_group_content tab_content section_group_content_{$modo} sgc_{$modo}\">";
+			
+				switch($permissions) {						
+					case 0	:
+						$html_content .= "<span class=\"css_span_dato\"> ".label::get_label('sin_acceso')." (group)</span>"; 		
+						break;									
+					case 1	:
+					case 2	:
+					case 3	:
+						$html_content .= $components_html;	
+						break;
+				}
+			
+			$html_content .= "</div>";
 
 
-		$html_content .= '<script>';
-				# Init component
-				$init_options = new stdClass();
-					$init_options->component_name 	= $component_name;
-					$init_options->wrapper_id 		= $tipo;
-				$html_content .= 'component_common.init('.json_encode($init_options).');';
-				$html_content .= '</script>';
-
-		if(SHOW_DEBUG===true) {
-			$html_content .= "<!-- /css_section_group_content -->";
-		}
+		#		
+		# Init component
+			$init_options = new stdClass();
+				$init_options->component_name 	= $component_name;
+				$init_options->wrapper_id 		= $tipo;
+			$html_content .= '<script>';
+			$html_content .= 'component_common.init('.json_encode($init_options).');';
+			$html_content .= '</script>';
 
 
 		# Prepare content to show in page
@@ -61,10 +52,9 @@
 		print $html_content;
 
 	
-	print "</div>"; //wrap
+	print '</div>'; //wrap
 
 	# html_delimiter
 	print component_common_draw::html_delimiter($component_name, $tipo, null, $label, 'out', $modo);
 
 
-?>
