--- a/lib/dedalo/component_calculation/html/component_calculation_edit.phtml
+++ b/lib/dedalo/component_calculation/html/component_calculation_edit.phtml
@@ -47,10 +47,10 @@
 				$html_content .= "data-formula ='".$preprocess_formula."' ";
 				$html_content .= "title=\"$html_title\" ";
 				$html_content .= ">";
-				$html_content .= '<pre>';
+				#$html_content .= '<pre>';
 				$html_content .= $dato;
 				#$html_content .= json_encode($this->get_dato(), JSON_PRETTY_PRINT);
-				$html_content .= "</pre>";
+				#$html_content .= "</pre>";
 				$html_content .= "</div>";			
 
 				#$html_content .= "<hr>".$preprocess_formula;
